# data-version-control-real-python

./: pyproject.toml
.dvc/: config
data/prepared/: test.csv.dvc  train.csv.dvc
model/: model.joblib.dvc
