[tool.poetry]
name = "data-version-control-real-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dvc = "^3.28.0"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
numpy = "^1.26.1"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
